--- a/sass/sample.scss
+++ b/sass/sample.scss
@@ -9,11 +9,49 @@ ul{
     list-style: none;
 }
 ul{
+    width: 800px;
+    margin: 200px auto;
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
     li{
+        width: 20%;
         span{
+            display: block;
+            margin: 0 auto;
+            width: 100%;
+            overflow: hidden;
+            border-radius: 10%;
             img{
+                width: 100%;
+                display: block;
+                transform: scale(1);
+                transition: all 0.6s ease-in-out;
             }
         }
-        a{}
+        a{
+            color: #333;
+            display: block;
+            line-height: 40px;
+            transform: scale(1);
+        }
     }
 }
+a::after{
+    content: "";
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    border-top: solid 1.5px #333;
+    border-right: solid 1.5px #333;
+    transform: scale(1) rotate(45deg);
+    margin-left: 10px;
+    margin-bottom: 1.5px;
+}
+ul li span:hover img{
+    transform: scale(1.2);
+    }
+ul li:hover a{
+    color: #000;
+    transform: scale(1.2);
+    }
