--- a/css/family.css
+++ b/css/family.css
@@ -11,7 +11,7 @@ a{
 #family{
     width: 300px;
     text-align: center;
-    margin: 200px auto;
+    margin: 500px auto;
     position: relative;
 }
 input{
@@ -31,6 +31,7 @@ label{
     height: 0;
     overflow: hidden;
     background-color: #333;
+    transition: all 0.6s ease-in-out;
 }
 #family ul li{}
 #family ul li a{
