--- a/css/sticky2.css
+++ b/css/sticky2.css
@@ -1,32 +1,51 @@
-
 *{
     padding: 0;
     margin: 0;
 }
-.container{
+#container{
     width: 80vw;
-    height: 300vh;
-    margin: 0 auto;
     text-align: center;
+    margin: 0 auto;
+    height: 300vh;
 }
-.container .wrap{
-    background-color: #ff4040;
+#container section{
+    background-color: #333;
     color: #fff;
-    line-height: 100px;
-    font-size: 20px;
-    font-weight: bold;
+    line-height: 80px;
 }
-.container header{
-    background-color: #e781fc;
+#container header{
+    background-color: #28bd37;
     position: sticky;
     top: 0;
+    width: 100%;
 }
-.container header p{
+#container header p{
+    display: inline-block;
     color: #fff;
-    line-height: 60px;
-    font-size: 20px;
-    font-weight: bold;
+    line-height: 50px;
 }
-
-/* 
-스티키는 부모 기준점이 필요없음 왜냐면 무조건 브라우저 기준임 */
+.top-btn{
+    width: 10vw;
+    height: 200px;
+    border-radius: 50%;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin: 40px;
+    display: block;
+    line-height: 200px;
+}
+.transform{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-color: #ffff00;
+    transition: all 0.6s linear;
+    transform-origin: center;
+}
+header p:hover + .transform{
+    transform: translateX(100px) rotate(1200deg);
+}
