--- a/65/css/main.css
+++ b/65/css/main.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+
+/* ///////////메인 헤더/////////// */
 *{
     padding: 0;
     margin: 0;
@@ -17,6 +19,7 @@ a{
 #header{
     display: flex;
     justify-content: space-between;
+    text-align: center;
     background-color: #fff;
     height: 100px;
 }
@@ -25,194 +28,132 @@ a{
     flex-direction: column;
     justify-content: center;
 }
-#header h1 > a{
+#header h1 a{
     display: block;
 }
-#header h1 > a img{
+#header h1 a img{
     display: block;
 }
+
 #header nav{
     width: 50%;
 }
-
 #header .depth-01{
     display: flex;
-    text-align: center;
 }
 #header .depth-01 > li{
-    width: 25%;
     position: relative;
+    width: 25%;
 }
 #header .depth-01 > li > a{
     display: block;
     line-height: 100px;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
 
 #header .depth-02{
     position: absolute;
-    width: 100%;
     top: 100%;
     left: 0;
+    width: 100%;
+    text-align: center;
+    background-color: #fff;
     overflow: hidden;
     height: 0;
     transition: all 0.6s ease-in-out;
-    background-color: #fff;
 }
 #header .depth-02 li{}
 #header .depth-02 li a{
     display: block;
     line-height: 50px;
-    transition: all 0.3s ease-in-out;
-}
-#header .depth-01 > li:hover > a,
-#header .depth-02 li:hover a{
-    background-color: #007900;
-    color: #fff;
+    transition: all 0.2s ease-in-out;
 }
 #header .depth-01:hover .depth-02{
     height: 200px;
 }
+#header .depth-01 > li:hover > a,
+#header .depth-02 li:hover a{
+    background-color: #1f5015;
+    color: #fff;
+}
 
-/* ////////////////////////////////////////////////////// */
+/* /////////메인 배너////////// */
 #mainbanner{
-    
-}
-#mainbanner ul{
-    height: 300px;
     background-color: #ccc;
+    height: 300px;
 }
+#mainbanner ul{}
 #mainbanner ul li{}
+#mainbanner ul li a{}
+#mainbanner ul li a img{}
 
-/* ////////////////////////////////////////////////////// */
-#content{}
+/* /////////콘텐츠/////////// */
+#content{
+    height: 200px;
+}
 #content > ul{
     display: flex;
 }
 #content > ul > li{
     width: 33.333%;
 }
-#content .tab-box{
-    display: flex;
-    width: 300px;
-    background-color: aliceblue;
-}
+#content .tab-box{}
 #content .tab-box > ul{
-    width: 100%;
     display: flex;
     position: relative;
 }
-#content .tab-box > ul > li{
-}
+#content .tab-box > ul > li{}
 #content .tab-box > ul > li input{
     display: none;
 }
 #content .tab-box > ul > li label{
+    line-height: 50px;
+    cursor: pointer;
     display: block;
     padding: 0 20px;
 }
-#content .ab-box{
+#content .tab-box > ul > li .ab-box{
     position: absolute;
-    top: 0%;
-    width: 100%;
+    top: 100%;
     left: 0;
+    width: 100%;
+    height: 150px;
+    background-color: #fff;
     z-index: 1;
-}
-
-#content .notice{
-    position: relative;
-}
-#content .notice dl{
-    display: block;
-}
-#content .notice dl dt{}
-#content .notice dl dt a{}
-#content .notice dl dd{}
-#content .notice dl dd a{}
-
-#content .gallery ul{
+    border: solid 1px #333;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    gap: 20px;
 }
+#content .notice input:checked ~ .ab-box{
+    z-index: 99;
+}
+#content ul li input:checked + label{
+    background-color: #1f5015;
+    color: #fff;
+}
+
+
+#content .ab-box dl{
+    display: flex;
+    line-height: 30px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#content .gallery{}
 #content .gallery .ab-box{
+}
+#content .gallery .ab-box > ul{
     display: flex;
+    justify-content: space-around;
+    margin-right: 20px;
 }
-#content .gallery ul li{}
-#content .gallery ul li a{}
-
-
-#content .middle-banner{}
-#content .middle-banner a{
-    display: block;
-
-}
-#content .direct{}
-#content .direct button{}
-
-#content .tab-box > ul > li input:checked ~ .ab-box{
-    z-index: 9;
-}
-
-/* ///////////////////////푸터 */
-#footer{}
-#footer > ul{
-    display: flex;
-}
-#footer > ul > li{}
-#footer ul .bottom-logo{
-    width: 20%;
-}
-#footer .bottom-logo a{
-    display: flex;
-}
-#footer .copy p{
-    line-height: 100px;
-    text-align: center;
-}
-#footer .sns-list li{}
-#footer .sns-list li a{
+#content .gallery .ab-box ul li a img{
     display: block;
 }
-#footer .sns-list li a img{}
-#footer ul .copy{
-    width: 60%;
-}
-#footer ul .sns-icon{
-    width: 20%;
-}
 
-
-/* /////////////////팝업 */
-#popup-box{
-    position: fixed;
-    width: 600px;
-    height: 300px;
-    background-color: #fff;
-    border: solid 1px #000;
-    top: calc(50% - 150px);
-    left: calc(50% - 300px);
-    z-index: 999;
-    text-align: center;
-    box-sizing: border-box;
-    padding: 40px;
-    display: none;
-}
-#popup-box #close-btn{
-    position: absolute;
-    padding: 20px;
-    top: 5%;
-    right: 5%;
-    border: 0;
-    background-color: #fff;
-    box-shadow: 6px 6px 6px #ccc;
-    cursor: pointer;
-
-}
-#popup-box h3{
-    margin: 40px 0;
-}
-#popup-box p{}
-.show{
-    display: block !important;
-}
+#content .ab-box dl dt{}
+#content .ab-box dl dt a{}
+#content .ab-box dl dd{}
+#content .ab-box dl dd a{}
