--- a/65/css/main.css
+++ b/65/css/main.css
@@ -120,10 +120,12 @@ a{
     height: 150px;
     background-color: #fff;
     z-index: 1;
-    border: solid 1px #333;
+    background-color: #dfffdd;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 20px;
+    box-sizing: border-box;
 }
 #content .notice input:checked ~ .ab-box{
     z-index: 99;
@@ -157,3 +159,28 @@ a{
 #content .ab-box dl dt a{}
 #content .ab-box dl dd{}
 #content .ab-box dl dd a{}
+
+/* ////////////콘텐츠 미들 배너///////// */
+
+#content .middle-banner{}
+#content .middle-banner a{
+    display: block;
+    height: 200px;
+    background-image: url(../images/banner.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+/* ///////////콘텐츠 바로가기/////// */
+#content .direct{}
+#content .direct button{
+    width: 50px;
+    height: 50px;
+    background-color: #fff;
+    border: 0;
+    cursor: pointer;
+}
+#content .direct a{
+    background-image: url(../images/direct.jpg);
+}
